--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "NodeJS",
     "unit"
   ],
-  "author": "Wellington S. Almeida (WellsSA)",
+  "author": "Thales Silva Morato (ThaSMorato)",
+  "engines": {
+    "node": "14.17.6"
+  },
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.4",
